--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-# pip3 install --pre torch --index-url https://download.pytorch.org/whl/nightly/cpu
-# 
+# pip install --pre torch --index-url https://download.pytorch.org/whl/nightly/cpu
+Cython
 
 numpy
 matplotlib
 wandb
 
-"gymnasium[box2d]"
+gymnasium[box2d]
 
 gym-anytrading
-gym-mtsim
+# gym-mtsim
 mobile-env
 
+# model based
 mbrl
+# offline rl
 d3rlpy
