--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,22 @@
-# pip install --pre torch --index-url https://download.pytorch.org/whl/nightly/cpu
-Cython
+jax[cpu]
+flax
+dm-haiku
+optax
+rlax
 
 numpy
 matplotlib
 wandb
+tqdm
 
-gymnasium[box2d]
+swig
+Box2D
 
-gym-anytrading
+# gymnasium[box2d]
+# gym-anytrading
+
 # gym-mtsim
-mobile-env
+# mobile-env
 
 # model based
 # mbrl
